refact: rename correct_answer_count to failed_answer_count
