# internal/models/quiz_answer_record.go
@@ -14,7 +14,7 @@ type QuizAnswerRecord struct {
 	AnswerQuestion     *json.RawMessage `gorm:"type:json;comment:'answer question'"`
 	Status             int32            `gorm:"type:tinyint;comment:'status 1: unstart, 2: progress, 3: finish, 4: failed';default:1"`
 	DueDate            *time.Time       `gorm:"type:date;comment:'due date'"`
-	CorrectAnswerCount *int32           `gorm:"size:8;comment:'correct answer count';default:0"`
+	FailedAnswerCount  *int32           `gorm:"size:8;comment:'failed answer count';default:0"`
 	TotalQuestionCount *int32           `gorm:"size:8;comment:'total answer count';default:0"`
 	FailedLogs         *json.RawMessage `gorm:"type:json;comment:'failed logs'"`
 	Scope              *int32           `gorm:"size:8;comment:'when finish quiz, caculate the persional scope';"`
